Added container css

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,13 @@
     </header>    
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ullam eligendi asperiores, dolorem aut sit nulla. Laborum cupiditate amet dicta nulla incidunt, facere illum tempore sit accusamus repellendus ullam quibusdam.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quis, vitae magni quod architecto aliquid molestiae, iste perferendis eius mollitia corporis possimus, a cupiditate molestias. Atque suscipit quia ullam sunt?
+      </p>
+    </main>
   </body>
 </html>
