--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,11 @@
     <!-- Header CSS -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
-    <!-- Header CSS -->
+    <!-- New tweet CSS -->
     <link rel="stylesheet" href="/styles/new_tweet.css" type="text/css" />
+
+    <!-- tweet CSS -->
+      <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -45,7 +48,7 @@
 
     <header class="avatar">
       <div>
-          <img src="/images/profile-hex.png"> 
+          <img src="/images/avatar/profile-hex.png"> 
       </div>
       <br>
       <div>
@@ -56,7 +59,6 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
         <form method="POST" action="http://localhost:8080/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
@@ -65,7 +67,28 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
-      </section>      
+      </section>    
+      
+      <article class="tweet-container">
+        <header class="tweet-header">
+          <div>
+            <div class="tweet-usrimg">
+              <img src="/images/avatar/usr1.jpg"/>
+            </div>
+            <span>users-name</span>
+         </div>
+          <span class="tweet-userid">@users-id</span>
+        </header>
+        <p class="tweet-msg">Hello world!!</p>
+        <footer class="tweet-footer">
+          <span>10 days ago</span>
+          <div>
+            <a href=""><div><i class="fas fa-flag"></i></div></a>
+            <a href=""><div><i class="fas fa-retweet"></i></div></a>
+            <a href=""><div><i class="fas fa-heart"></i></div></a>
+          </div>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
