Add fixed nav-bar

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,94 @@
           </div>
         </footer>
       </article>
+
+      <article class="tweet-container">
+        <header class="tweet-header">
+          <div>
+            <div class="tweet-usrimg">
+              <img src="/images/avatar/usr2.jpg"/>
+            </div>
+            <span>users-name</span>
+         </div>
+          <span class="tweet-userid">@users-id</span>
+        </header>
+        <p class="tweet-msg">Hello world!!</p>
+        <footer class="tweet-footer">
+          <span>10 days ago</span>
+          <div>
+            <a href=""><div><i class="fas fa-flag"></i></div></a>
+            <a href=""><div><i class="fas fa-retweet"></i></div></a>
+            <a href=""><div><i class="fas fa-heart"></i></div></a>
+          </div>
+        </footer>
+      </article>
+
+
+      <article class="tweet-container">
+        <header class="tweet-header">
+          <div>
+            <div class="tweet-usrimg">
+              <img src="/images/avatar/usr3.jpg"/>
+            </div>
+            <span>users-name</span>
+         </div>
+          <span class="tweet-userid">@users-id</span>
+        </header>
+        <p class="tweet-msg">Hello world!!</p>
+        <footer class="tweet-footer">
+          <span>10 days ago</span>
+          <div>
+            <a href=""><div><i class="fas fa-flag"></i></div></a>
+            <a href=""><div><i class="fas fa-retweet"></i></div></a>
+            <a href=""><div><i class="fas fa-heart"></i></div></a>
+          </div>
+        </footer>
+      </article>
+
+
+      <article class="tweet-container">
+        <header class="tweet-header">
+          <div>
+            <div class="tweet-usrimg">
+              <img src="/images/avatar/usr4.jpg"/>
+            </div>
+            <span>users-name</span>
+         </div>
+          <span class="tweet-userid">@users-id</span>
+        </header>
+        <p class="tweet-msg">Hello world!!</p>
+        <footer class="tweet-footer">
+          <span>10 days ago</span>
+          <div>
+            <a href=""><div><i class="fas fa-flag"></i></div></a>
+            <a href=""><div><i class="fas fa-retweet"></i></div></a>
+            <a href=""><div><i class="fas fa-heart"></i></div></a>
+          </div>
+        </footer>
+      </article>
+
+
+      <article class="tweet-container">
+        <header class="tweet-header">
+          <div>
+            <div class="tweet-usrimg">
+              <img src="/images/avatar/usr5.jpg"/>
+            </div>
+            <span>users-name</span>
+         </div>
+          <span class="tweet-userid">@users-id</span>
+        </header>
+        <p class="tweet-msg">Hello world!!</p>
+        <footer class="tweet-footer">
+          <span>10 days ago</span>
+          <div>
+            <a href=""><div><i class="fas fa-flag"></i></div></a>
+            <a href=""><div><i class="fas fa-retweet"></i></div></a>
+            <a href=""><div><i class="fas fa-heart"></i></div></a>
+          </div>
+        </footer>
+      </article>
+
     </main>
   </body>
 </html>
