Add Sending tweet by AJAX

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <form method="POST" action="http://localhost:8080/tweets">
+        <form method="POST" id="new-tweet-form" action="http://localhost:8080/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
